# AgenticAI

./: .replit  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
LegalEagle AI Legal Document Analyzer/: .replit  README.md  create_test_pdf.py  main.py  pyproject.toml  replit.md  streamlit_app.py  test_contract.txt
Startup Evaluator Agent/: Agentic_AI_Startup_Pitch_Evaluator.ipynb  README.md  requirements.txt
Symptom Recognizer/: main.py
